## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

bomberclone_includedir = $(pkgincludedir)

bomberclone_include = \
	basic.h \
	bomberclone.h \
	chat.h \
	font.h \
	gfx.h \
	keybinput.h \
	map.h \
	menu.h \
	menugui.h \
	network.h \
	packets.h \
	sysfunc.h \
	sound.h \
	ogcache-client.h\
	udp.h \
	flyingitems.h \
	keyb.h \
	player.h \
	bomb.h \
	single.h \
	broadcast.h

noinst_HEADERS = $(bomberclone_include)
