
bomberclone_gfxdir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/gfx

bomberclone_gfx_DATA = \
	menu0.png \
	menu7.png \
	menubutton1_2.png \
	menuentry1_0.png \
	menulist0_4.png \
	menulist1_2.png \
	menuselect.png \
	font0.png \
	menu1.png \
	menu8.png \
	menubutton2_0.png \
	menuentry1_1.png \
	menulist0_5.png \
	menulist1_3.png \
	font1.png \
	menu2.png \
	menubutton0_0.png \
	menubutton2_1.png \
	menuentry1_2.png \
	menulist0_6.png \
	menulist1_4.png \
	font2.png \
	menu3.png \
	menubutton0_1.png \
	menubutton2_2.png \
	menulist0_0.png \
	menulist0_7.png \
	menulist1_5.png \
	logo1.png \
	menu4.png \
	menubutton0_2.png \
	menuentry0_0.png \
	menulist0_1.png \
	menulist0_8.png \
	menulist1_6.png \
	logo.png \
    menu5.png \
	menubutton1_0.png \
	menuentry0_1.png \
	menulist0_2.png \
	menulist1_0.png \
	menulist1_7.png \
	menu6.png \
	menubutton1_1.png \
	menuentry0_2.png \
	menulist0_3.png \
	menulist1_1.png \
	menulist1_8.png

EXTRA_DIST = $(bomberclone_gfx_DATA)
