## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

bomberclone_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

bomberclone_pixmaps_DATA = \
	bomberclone.png \
	bomberclone.ico

EXTRA_DIST = $(bomberclone_pixmaps_DATA)
