
bomberclone_playerdir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/player

bomberclone_player_DATA = \
	dead0.png \
	ghost.png \
	playersick.png \
	respawn.png \
	player0.png \
	player1.png \
	player2.png \
	player3.png \
	player4.png \
	player5.png \
	player6.png \
	player7.png

EXTRA_DIST = $(bomberclone_player_DATA)
