
bomberclone_tilesetdir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/tileset/default

bomberclone_tileset_DATA = \
	dead.wav \
	drop.wav \
	explode.wav \
	background.png \
	bomb.png \
	powerbad.png \
	powerup.png \
	pwdeath.png \
	pwshoe.png \
	spliquid.png \
	sppush.png \
	sptrigger.png \
	tunnel.png \
	block.png \
	fire.png \
	powersp.png \
	pwbomb.png \
	pwfire.png \
	spkick.png \
	spmoved.png \
	sprow.png \
	stone.png

EXTRA_DIST = $(bomberclone_tileset_DATA)
